feat: allow writing replicated http items to multiple storage backends
